--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,9 @@
     box-sizing: border-box;
 }
 
-body{
+body {
     margin: 0 auto;
 }
-
 
 /* LAYOUT */
 
@@ -18,26 +17,37 @@ body{
 
 /* COMPONENTS */
 
-header{
+/* HEADER */
+
+header {
     padding: 0 1.56rem 0 1.56rem;
 }
 
+/* GALLERY */
 
-.main-content{
+.main-gallery .pic{
+    object-fit: cover;
+    height: 197px;
+    cursor: pointer;
+}
+
+/* .img-1 {
+    object-fit: cover;
+    height: 100px;
+} */
+
+/* MEME EDITOR */
+
+.main-content {
     background-color: #e3e3e3;
     padding: 13px 25.5px;
 }
 
-.main-controls{
+.main-controls {
     width: 270px;
     height: 270px;
     background-color: aliceblue;
 }
-
-
-
-
-
 
 /* HELPERS */
 
