--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,10 @@ header {
 
 /* MEME EDITOR */
 
+canvas{
+    cursor: grab;
+}
+
 .main-content {
     background-color: #e3e3e3;
     padding: 13px 25.5px;
