--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
     margin: 0 auto;
 }
 
-a{
+a {
     text-decoration: none;
     color: #fff;
 }
@@ -53,6 +53,7 @@ header {
 
 nav ul {
     gap: 10px;
+    display: flex;
 }
 
 nav ul li {
@@ -63,11 +64,19 @@ nav ul li {
     color: #fff;
 }
 
-.gallery-li{
+.btn-menu {
+    display: none;
+}
+
+.gallery-a {
     color: #000;
     height: 100%;
 }
 
+.selected {
+    box-shadow: inset black 0 -2px 0;
+    color: #000;
+}
 
 /* MEME EDITOR */
 
@@ -107,6 +116,19 @@ canvas {
     object-position: center;
 }
 
+.download-share button{
+    background-color: #ff7f00;
+    color: white;
+    padding: 10px 10px;
+    border-radius: 5px;
+
+}
+
+.download-share button:hover{
+    background-color: #d36900;
+
+}
+
 /* SEARCH BAR */
 
 .search-bar {
@@ -115,7 +137,7 @@ canvas {
 
 /* GALLERY */
 
-.main-gallery{
+.main-gallery {
     background-color: #e3e3e3;
     padding: 13.5px 20px;
 }
@@ -129,12 +151,12 @@ canvas {
 
 /* FOOTER */
 
-footer{
+footer {
     height: 103.5px;
     background-color: #ff7f00;
 }
 
-.all-rights{
+.all-rights {
     color: #fff;
     font-weight: 100;
 }
@@ -163,10 +185,20 @@ footer{
     justify-content: space-between;
 }
 
+.flex.space-even {
+    justify-content: space-evenly;
+}
+
 .flex.column {
     flex-direction: column;
 }
 
+/* buttons helpers */
+
+.clean-btn{
+    background-color: unset;
+    border: unset;
+}
 
 /* list helpers */
 
@@ -174,4 +206,57 @@ footer{
     margin: 0;
     padding: 0;
     list-style-type: none;
+}
+
+@media (max-width: 620px) {
+    .main-layout {
+        width: 350px;
+        margin: auto;
+    }
+    nav ul {
+        display: none;
+    }
+    body.menu-open nav ul {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        top: 40px;
+        background-color: #ff7f00;
+        gap: unset;
+        height: 90px;
+        width: 100px;
+        right: 95px;
+        font-size: 2rem;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    body.menu-open nav ul li {
+        height: auto;
+    }
+    .btn-menu {
+        display: block;
+        align-self: center;
+    }
+    .btn-menu::before {
+        content: '☰';
+    }
+    body.menu-open .btn-menu::before {
+        content: 'X';
+    }
+    .main-content {
+        flex-direction: column;
+    }
+    .main-gallery {
+        background-color: #e3e3e3;
+        padding: 9px 15px;
+    }
+    .main-gallery .pic {
+        object-fit: cover;
+        height: 100px;
+        margin: 2px;
+        cursor: pointer;
+    }
+    .main-controls {
+        height: auto;
+    }
 }
