fixed the x range on sticker movment. added save to memes

--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,13 @@ canvas {
     cursor: pointer;
 }
 
+/* MEMES TAB */
+
+.memes img{
+    height: 140px;
+    padding: 10px;
+}
+
 /* SEARCH BAR */
 
 .search-bar {
