--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 @font-face {
     font-family: montserrat;
-    src: url(/fonts/Montserrat/Montserrat-Regular.ttf);
+    src: url(./fonts/Montserrat/Montserrat-Regular.ttf);
 }
 
 html {
